--- a/app_festaNow/templates/festa_now/audience/audience_main.html
+++ b/app_festaNow/templates/festa_now/audience/audience_main.html
@@ -1,39 +1,163 @@
-{% extends 'base_copyright_version.html' %}
+{% extends 'base.html' %}
 {% block content %}
- 
-<div class="row">
-    <div class="col-md-5">
-        <img src ="{{festa.poster.url}}"style="height:500px">
-        <ul class="vertical-menu">
 
-            <li><a href="{% url 'audience_main' festa.id %}">공지사항</a></li>
-            
-            <li><a href="{% url 'now_now' festa.id %}">Festa now</a></li>
-            
-            <li><a href="{% url 'audience_map' festa.id %}">지도</a></li>
-            
-            <li><a href="{% url 'audience_lost_found' festa.id %}">찾아가라</a></li>
+<div id="notice_container">
+    <div id="subtitle_text_wrapper">
+        공지사항
+        <i class="fas fa-infinity"></i>
+    </div>
+    <div id="table_bt_div">
+        <div id="bt_write_div">
+            <form action="{% url 'confirm_login' festa.id %}" method="GET">
+                    <input id="write_bt_image" type="submit" value="&#xf040" class="7x">
+                    <input id="write_bt_text" type="submit" value="글쓰기">
+            </form>
+        </div>
 
-            <li><a href="{% url 'audience_home' festa.id %}">집가자</a></li>
+        <div id="table_div">
+                <table>
+                    <tr>
+                        <td id="table_intro" colspan="5"> 2019 멋사 해커톤 대회에 대한 게시판 입니다.</td>
+                    </tr>
+                    <tr id="kind_board">
+                        <td id="title" class="headTd">구분</td>
+                        <td id="title" class="headTd">제목</td>
+                        <td id="title" class="headTd">작성자</td>
+                        <td id="title" class="headTd">날짜</td>
+                    </tr>
+                    <!-- 공지등록 -->
+                    <tr id="notice_board">
+                        <td>공지사항</td>
+                        <td class="title_td"><a href="#test">제목</a></td>
+                        <td>작성자</td>
+                        <td>날짜 시간</td>
+                    </tr>
+                    <!-- 내용등록 -->
+                    <tr id="content_board">
+                        <td>번호</td>
+                        <td class="title_td"><a href="test">(지역) 제목</a></td>
+                        <td>작성자</td>
+                        <td>날짜 시간</td>
+                    </tr>
+                </table>
+            </div>
+        {% for staff in staff_list %}
+        <br>
+        <a href="{% url 'detail_staff' festa.id staff.id %}"> : {{staff.title}}</a>
+        {{staff.writer}}
+        {{staff.pub_date}}
+        <br>
+        {% endfor %}
+        <div id="pagination">
+            {%if staff_list.has_previous%}
+            <a href="?page=1">First</a>
+            <a href="?page={{staff_list.previous_page_number}}">Previous</a>
+            {%endif%}
 
-            </ul>
+            <span>{{staff_list.number}}</span>
+            <span>of</span>
+            <span>{{staff_list.paginator.num_pages}}</span>
+
+            {%if staff_list.has_next%}
+            <a href="?page={{staff_list.next_page_number}}">Next</a>
+            <a href="?page={{staff_list.paginator.num_pages}}">Last</a>
+            {%endif%}
+        </div>
+        </div>
     </div>
 
-    <div class="col-md-7" style="background-color:#EEE9F7; ">
-            <div id="subtitle_text_wrapper">
-                    공지사항
-                </div>
-            {% for audience in audiences.all %}
-                <br>
-                <a href="{% url 'detail_audience' festa.id audience.id %}"> : {{audience.title}}</a> 
-                {{audience.writer}}
-                {{audience.pub_date}}
-                <br>
-                {% endfor %}
-    </div>
-</div>
+    <!-- 자바 스크립트 연결 -->
+    {% load static %}
+    <script type="text/javascript" src="/static/js/festa_now_audience_js.js?ver=3' %}"></script>
 
-<!-- 자바 스크립트 연결 -->
-{% load static %}
-<script type="text/javascript" src="/static/js/standard_js.js?ver=2' %}"></script>
-{% endblock %}
+    <style>
+        #notice_container {
+            width: 100%;
+            height: 100%;
+            padding-top: 50px;
+            padding-left: 3%;
+            padding-right: 20%;
+        }
+
+        #subtitle_text_wrapper {
+            font-size: 20px;
+            font-weight: bold;
+            min-width: 525px;
+        }
+
+        #table_bt_div {
+            background: #ffffff;
+            padding-left: 3%;
+            padding-right: 3%;
+            padding-top: 5%;
+            padding-bottom: 5%;
+            margin-top: 20px;
+            min-width: 525px;
+        }
+
+        #table_div {
+            width: 100%;
+        }
+
+        #notice_board,
+        #kind_board {
+            border-bottom: 1px solid #6357ff;
+        }
+
+        #notice_board {
+            color: #6357ff;
+        }
+
+        #notice_board a {
+            color: #6357ff;
+            text-decoration: none;
+        }
+
+        #content_board {
+            border-bottom: 1px solid #D5D5D5;
+        }
+
+        #content_board a {
+            color: #000000;
+            text-decoration: none;
+        }
+
+        td {
+            width: 10%;
+        }
+
+        .title_td {
+            width: 50%;
+        }
+
+        table {
+            width: 100%;
+        }
+
+        #pagination{
+            width: 100%;
+            text-align: center;
+        }
+        #write_bt_image{
+            width: auto;
+            padding: 1px;
+            font-family: 'FontAwesome';
+            background: none;
+            border: 0px;
+            padding: 0px;
+        }
+        #write_bt_text{
+            border: 0px;
+            background: none;
+            padding: 0px;
+        }
+        #bt_write_div form{
+            background: #eaeaea;
+            text-align: center;
+            display: inline-block;
+        }
+        #bt_write_div form input{
+        border: 0px;
+        }
+    </style>
+    {% endblock %}
