--- a/app_festaNow/templates/festa_now/staff/login.html
+++ b/app_festaNow/templates/festa_now/staff/login.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="bt_wrapper">
                             <input id="num_editText" type="text" name="reservation_num" placeholder="1234">
-                            <input id="certificateBt" type="submit" value="&#xf064" class="fa-7x">
+                            <input id="certificateBt" type="submit" value="&#xf064;" class="fa-7x">
                     </div>   
                 </div>
             </form>
@@ -89,7 +89,8 @@
         width: 10%;
         padding: 1px;
         background: #ff5543;
-        font-family: FontAwesome;
+        font-family: 'FontAwesome';
+        content: '\f274';
         color: #ffffff;
     }
 </style>
