--- a/app_festaNow/templates/festa_now/audience/home/audience_home.html
+++ b/app_festaNow/templates/festa_now/audience/home/audience_home.html
@@ -1,65 +1,47 @@
-{% extends 'base_copyright_version.html' %}
+{% extends 'base.html' %}
 {% block content %}
- 
-    <div class="row">
-        <div class="col-md-5">
-            <img src ="{{festa.poster.url}}"style="height:500px">
-            <ul class="vertical-menu">
 
-                <li><a href="{% url 'audience_main' festa.id %}">공지사항</a></li>
-                
-                <li><a href="{% url 'now_now' festa.id %}">Festa now</a></li>
-                
-                <li><a href="{% url 'audience_map' festa.id %}">지도</a></li>
-                
-                <li><a href="{% url 'audience_lost_found' festa.id %}">찾아가라</a></li>
+<div id="team_div">
+    <h1>집가자</h1>
+    <a href="{% url 's_new_home' festa.id %}">글쓰기 </a>
 
-                <li><a href="{% url 'audience_home' festa.id %}">집가자</a></li>
+    <hr>
+    {% for home in home_list %}
+    <br>
+    <a href="{% url 's_detail_home' festa.id home.id %}"> : {{home.title}}</a>
+    {{home.region}}
+    {{home.writer}}
+    {{home.pub_date}}
+    <br>
+    <a href="{% url 's_edit_home' festa.id home.id %}" class="card-link">수정하기</a>
+    <a href="{% url 's_delete_home' festa.id home.id %}" class="card-link">삭제하기</a>
 
-                </ul>
-        </div>
-
-    <div class="col-md-7" style="background-color:#EEE9F7; ">
-      
-            <h1>집가자</h1>
-            <a href="{% url 'a_new_home' festa.id %}">글쓰기 </a>
-        
-            <hr>
-            {% for home in home_list %}
-            <br>
-            <a href="{% url 'a_detail_home' festa.id home.id %}"> : {{home.title}}</a>
-            {{home.region}}
-            {{home.writer}}
-            {{home.pub_date}}
-            <br>
-            <a href="{% url 'a_edit_home' festa.id home.id %}" class="card-link">수정하기</a>
-            <a href="{% url 'a_delete_home' festa.id home.id %}" class="card-link">삭제하기</a>
-        
-            <div class="middle">
-                <hr>
-            </div>
-        
-            {% endfor %}
-
-            <div class="middle">
-                {%if home_list.has_previous%}
-                <a href="?page=1">First</a>
-                <a href="?page={{home_list.previous_page_number}}">Previous</a>
-                {%endif%}
-
-                <span>{{home_list.number}}</span>
-                <span>of</span>
-                <span>{{home_list.paginator.num_pages}}</span>
-
-                {%if home_list.has_next%}
-                <a href="?page={{home_list.next_page_number}}">Next</a>
-                <a href="?page={{home_list.paginator.num_pages}}">Last</a>
-                {%endif%}
-            </div>
-
-
+    <div class="middle">
+        <hr>
     </div>
 
-    
-</body>
+    {% endfor %}
+    <div class="middle">
+        {%if home_list.has_previous%}
+        <a href="?page=1">First</a>
+        <a href="?page={{home_list.previous_page_number}}">Previous</a>
+        {%endif%}
+
+        <span>{{home_list.number}}</span>
+        <span>of</span>
+        <span>{{home_list.paginator.num_pages}}</span>
+
+        {%if home_list.has_next%}
+        <a href="?page={{home_list.next_page_number}}">Next</a>
+        <a href="?page={{home_list.paginator.num_pages}}">Last</a>
+        {%endif%}
+    </div>
+
+
+</div>
+<!-- 자바 스크립트 연결 -->
+{% load static %}
+<script type="text/javascript" src="{% static 'js/festa_now_audience_js.js' %}"></script>
+
+<style></style>
 {% endblock %}
