festa ready layout

--- a/app_festaNow/templates/festa_now/staff/home/staff_home.html
+++ b/app_festaNow/templates/festa_now/staff/home/staff_home.html
@@ -41,7 +41,7 @@
 </div>
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="{% static 'js/standard_js.js' %}"></script>
+<script type="text/javascript" src="/static/js/festa_now_staff_js.js?ver=3' %}"></script>
 
 <style></style>
 {% endblock %}
