--- a/app_festaNow/templates/festa_now/staff/map.html
+++ b/app_festaNow/templates/festa_now/staff/map.html
@@ -49,6 +49,6 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="/static/js/standard_js.js?ver=2' %}"></script>
+<script type="text/javascript" src="/static/js/festa_now_staff_js.js?ver=3' %}"></script>
 <style></style>
 {% endblock %}
