--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -40,6 +40,6 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="/static/js/ready_standard_js.js?ver=1' %}"></script>
+<script type="text/javascript" src="{% static 'js/festa_ready_js.js' %}"></script>
 
 {% endblock %}
