--- a/app_festaNow/templates/festa_now/staff/notice/cannot_notice.html
+++ b/app_festaNow/templates/festa_now/staff/notice/cannot_notice.html
@@ -4,6 +4,8 @@
     <h2>공지사항 등록하기</h2>
     <br>
     <div class="container">
+
+        {{fail}}
         <!-- <form action="{% url 'confirm_register' festa.id %}" method="POST">
             {% csrf_token %} -->
             <p>등록권한이 없습니다</p>
