--- a/app_festa/templates/festa_home/home.html
+++ b/app_festa/templates/festa_home/home.html
@@ -196,7 +196,7 @@
 
     /* 페스타 나우 배경색 지정 */
     #festa_now_home {
-        background: #D9E5FF;
+        background: #ffffff;
     }
 
     /* 보여질 내용 사이즈 설정 */
