--- a/app_festaNow/templates/festa_now/audience/lost_found/audience_lost_found.html
+++ b/app_festaNow/templates/festa_now/audience/lost_found/audience_lost_found.html
@@ -44,7 +44,7 @@
   
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="{% static 'js/festa_now_audience_js.js' %}"></script>
+<script type="text/javascript" src="/static/js/festa_now_audience_js.js?ver=3' %}"></script>
 
 <style></style>
 {% endblock %}
