--- a/app_festaNow/templates/festa_now/staff/map.html
+++ b/app_festaNow/templates/festa_now/staff/map.html
@@ -1,54 +1,50 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div id="map">
-    {{festa.space}} {{festa.detail_map}}
-    <div id="map" style="width:100%;height:350px;"></div>
+<div id="map_container">
+        <div id="subtitle_text_wrapper">
+                지도
+            </div>
+            <div id="map_info_div">
+                <div>
+                    {{festa.space}} {{festa.detail_map}}
+                </div>
+                <div>
+                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a6997107b687683607fb8587b9bb914&libraries=services"></script>
+                    <div id="map" style="width:100%;height:350px;"></div>
+                </div>
+            </div>
 
-    <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a6997107b687683607fb8587b9bb914&libraries=services"></script>
-    <script>
-        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-            mapOption = {
-                center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-                level: 3 // 지도의 확대 레벨
-            };
-
-        // 지도를 생성합니다    
-        var map = new kakao.maps.Map(mapContainer, mapOption);
-
-        // 주소-좌표 변환 객체를 생성합니다
-        var geocoder = new kakao.maps.services.Geocoder();
-
-        // 주소로 좌표를 검색합니다
-        geocoder.addressSearch('{{festa_object.detail_map}}', function (result, status) {
-
-            // 정상적으로 검색이 완료됐으면 
-            if (status === kakao.maps.services.Status.OK) {
-
-                var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
-
-                // 결과값으로 받은 위치를 마커로 표시합니다
-                var marker = new kakao.maps.Marker({
-                    map: map,
-                    position: coords
-                });
-
-                // 인포윈도우로 장소에 대한 설명을 표시합니다
-                var infowindow = new kakao.maps.InfoWindow({
-                    content: '<div style="width:150px;text-align:center;padding:6px 0;">공연 장소:{{festa_object.space}}</div>'
-                });
-                infowindow.open(map, marker);
-
-                // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                map.setCenter(coords);
-            }
-        });
-    </script>
 </div>
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
+<script type="text/javascript" src="/static/js/map_js.js?ver=3' %}"></script>
 <script type="text/javascript" src="/static/js/festa_now_staff_js.js?ver=3' %}"></script>
-<style></style>
+<style>
+    #map_container{
+        width: 100%;
+        height: 100%;
+        padding-top: 50px;
+        padding-left: 3%;
+        padding-right: 20%;
+    }
+
+    /* 지도 게시판 타이틀 */
+    #subtitle_text_wrapper {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    /* content가 들어가 container */
+    #map_info_div {
+        background: #ffffff;
+        padding-left: 3%;
+        padding-right: 3%;
+        padding-top: 2%;
+        padding-bottom: 5%;
+        margin-top: 20px;
+        width: 100%;
+    }
+</style>
 {% endblock %}
