--- a/app_festaReady/templates/festa_ready/ready_main.html
+++ b/app_festaReady/templates/festa_ready/ready_main.html
@@ -18,7 +18,7 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="{% static 'js/festa_ready_js.js' %}"></script>
+<script type="text/javascript" src="/static/js/festa_ready_js.js?ver=3' %}"></script>
 
 {% endblock %}
 
