--- a/app_festa/templates/festa_home/all_festaNow.html
+++ b/app_festa/templates/festa_home/all_festaNow.html
@@ -1,16 +1,157 @@
+{% extends 'base_copyright_version.html' %}
+{% block content %}
+
 <div class="container">
-    <h1>Festa NOW 바로 오늘, 함꼐 즐겨 봐요</h1>
-    <!--검색 버튼-->
-    <form action="{% url 'search' %}" method="GET">
-        <input type="text" name="search_bar" placeholder="ex)'지산 락 페스티벌'궁금하지 않나요?" value="{{keyword}}">
-        <input type="submit" value="검색">
-    </form>
+    <br>
+    <br>
+    <br>
+    <div class="all_top">
+        <div id="festa_now_title_home">
+            <h5 class="main_text">Festa now</h5>
+            <p class="sub_text">바로 오늘, 함께 즐겨봐요</p>
+        </div>
+        <!--검색 버튼-->
+        <div id="form_wrapper">
+            <form action="{% url 'search' %}" method="GET">
+                <input id="editText" type="text" name="search_bar" value="{{keyword}}">
+                <input id="searchBt" type="submit" value="&#xf002" class="fa-lg">
+            </form>
+        </div>
+    </div>
 
-    {% for festa_now in festa.all %}
-    {% if today|date:"Y m d" >= festa_now.schedule_start|date:"Y m d" and festa_now.schedule_end|date:"Y m d" >= today|date:"Y m d" %}
-        <img src="{{festa_now.poster.url}}">
-        <p>{{festa_now.name}}</p>
 
-    {% endif %}
-    {% endfor %}
+    <div class="all_body_wrapper">
+
+        {% for festa_now in festa.all %}
+        {% if today|date:"Y m d" >= festa_now.schedule_start|date:"Y m d" and festa_now.schedule_end|date:"Y m d" >= today|date:"Y m d" %}
+
+        <div class="item">
+            <a href="{% url 'now_detail' festa_now.id %}"><img src="{{festa_now.poster.url}}"></a>
+            <div class="day_wrapper">
+                <div class="day_span2">
+                    <div class="name">{{festa_now.name}}</div>
+                    <div class="day">D-DAY</div>
+                </div>
+            </div>
+        </div>
+
+
+        {% endif %}
+        {% endfor %}
+
+    </div>
+
 </div>
+</div>
+
+{% load static %}
+<script type="text/javascript" src="/static/js/home_js.js?ver=1"></script>
+
+<style>
+    #form_wrapper {
+        width: 50%;
+        height: 100%;
+        align-self: flex-end;
+        display: flex;
+        padding-right: 10%;
+    }
+
+    #form_wrapper form {
+        margin-bottom: 13px;
+        width: 100%;
+        align-self: center;
+        display: block;
+        border: 1px solid #EAEAEA;
+        -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
+
+    }
+
+    #editText {
+        width: 90%;
+        text-overflow: ellipsis;
+    }
+
+    #searchBt {
+        width: 10%;
+        padding: 1px;
+        background: #ff5543;
+        font-family: FontAwesome;
+        color: #ffffff;
+    }
+
+    #form_wrapper form input {
+        float: left;
+        border: 0px;
+    }
+
+    .day_span2 {
+        display: inline-flex;
+        padding-left: 0;
+    }
+
+    .name {
+        font-family: NotoSansCJKkr;
+        font-size: 18px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        color: black;
+    }
+
+    .day {
+        margin-left: 5px;
+        font-family: NotoSansCJKkr;
+        font-size: 18px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        color: rgba(0, 0, 0, 0.5);
+    }
+
+    #festa_now_title_home {
+        display: inline-flex;
+        width: 100%;
+
+    }
+
+    .all_top {
+        display: inline-flex;
+        width: 100%;
+    }
+
+    .main_text {
+        font-size: 36px;
+    }
+
+    .sub_text {
+        font-size: 18px;
+        padding-top: 17px;
+        margin-left: 10px;
+        color: rgba(0, 0, 0, 0.5);
+    }
+
+    .all_body_wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 20px;
+    }
+
+    .item {
+        text-align: center;
+        margin-bottom: 75px;
+    }
+    .item .day_span2{
+        padding-left: 0px;
+    }
+
+    img {
+        width: 90%;
+        height: 225px;
+    }
+</style>
+
+{% endblock %}
