--- a/app_festa/templates/festa_home/search.html
+++ b/app_festa/templates/festa_home/search.html
@@ -1,11 +1,5 @@
-{% extends 'base.html' %}
-<!-- 
-[base.html]
-<head>
-</head>
+{% extends 'base_copyright_version.html' %}
 
-<body>
- -->
 {% block content %}
 <div class="container">
     <div class="main">
@@ -38,7 +32,7 @@
 <style>
     img {
         height: 300px;
-        weight: 150px;
+        width: 150px;
         border: 1px solid;
         border-color: black;
     }
