--- a/project_festa/templates/base_copyright_version.html
+++ b/project_festa/templates/base_copyright_version.html
@@ -12,13 +12,13 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+        </script>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
@@ -28,9 +28,14 @@
 </head>
 
 <body>
+
     <!-- navbar시작 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">FGD</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="logo">
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="/static/image/logo.png">
+            </a>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -76,9 +81,37 @@
 </html>
 
 <style>
+    #navbarSupportedContent a {
+        border: 1px solid #6357ff;
+        background-color: #6357ff;
+        color: white;
+        margin-left: 20px;
+        text-align: right;
+        display: inline-block;
+        height: 33px;
+        font-size: 18px;
+        padding-top: 3px;
+    }
+    nav ul {
+        margin-left: 750px;
+    }
+
+    .logo img {
+        width: 60px;
+        height: auto;
+        margin-left: 182.25px;
+    }
+
+    nav {
+        height: 48.75px;
+        -webkit-box-shadow: 0 8px 6px -6px  rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 0 8px 6px -6px  rgba(0, 0, 0, 0.2);
+        box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
+    }
+
     footer {
         width: 100%;
-        background: #D9E5FF;
+        background: #f4f3ff;
     }
 
     #bt_footer_element,
