--- a/app_festaNow/templates/festa_now/audience/lost_found/audience_lost_found.html
+++ b/app_festaNow/templates/festa_now/audience/lost_found/audience_lost_found.html
@@ -1,31 +1,46 @@
 {% extends 'base.html' %}
 {% block content %}
 
-   
-
-    <div class="col-md-7" style="background-color:#EEE9F7; ">
-        <div id="team_div">
-            <h1>찾아가라</h1>
-            <a href="{% url 's_new_lost_found' festa.id %}">글쓰기 </a>
-
-            <hr>
-            {% for lost_found in lostfounds_list %}
-            <br>
-            <a href="{% url 's_detail_lost_found' festa.id lost_found.id %}"> : {{lost_found.title}}</a>
-            {{lost_found.post_type}}
-            {{lost_found.writer}}
-            {{lost_found.pub_date}}
-            <br>
-            <a href="{% url 's_edit_lost_found' festa.id lost_found.id %}" class="card-link">수정하기</a>
-            <a href="{% url 's_delete_lost_found' festa.id lost_found.id %}" class="card-link">삭제하기</a>
-
-            <div class="middle">
-                <hr>
-            </div>
-
-            {% endfor %}
+<div id="audience_lost_container">
+    <div id="subtitle_text_wrapper">
+        찾아가라
+    </div>
+    <div id="table_bt_div">
+        <div id="bt_write_div">
+            <form action="{% url 'a_new_lost_found' festa.id %}" method="GET">
+                <input id="write_bt_image" type="submit" value="&#xf040" class="7x">
+                <input id="write_bt_text" type="submit" value="글쓰기">
+            </form>
         </div>
-        <div class="middle">
+
+        <div id="table_div">
+            <table>
+                <tr>
+                    <td id="table_intro" colspan="5"> 분실물 관리 &nbsp;'찾아가라'&nbsp; 게시판 입니다.</td>
+                </tr>
+                <tr id="kind_board">
+                    <td>구분</td>
+                    <td>제목</td>
+                    <td>작성자</td>
+                    <td>날짜</td>
+                    <td>시간</td>
+                </tr>
+                <!-- 게시글 등록 -->
+                {% for lost_found in lostfounds_list %}
+                <tr class="notice_board">
+                    <td>{{lost_found.post_type}}</td>
+                    <td class="title_td">
+                        <a href="{% url 's_detail_lost_found' festa.id lost_found.id %}"> <span>{{lost_found.title}}</span></a>
+                    </td>
+                    <td>{{lost_found.writer}}</td>
+                    <td>{{lost_found.pub_date|date:"Y/m/d"}}</td>
+                    <td>{{lost_found.pub_date|time:"H:i"}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+
+        <div id="pagination">
             {%if lostfounds_list.has_previous%}
             <a href="?page=1">First</a>
             <a href="?page={{lostfounds_list.previous_page_number}}">Previous</a>
@@ -41,10 +56,153 @@
             {%endif%}
         </div>
     </div>
-  
+</div>
+
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="/static/js/festa_now_audience_js.js?ver=3' %}"></script>
+<script type="text/javascript" src="/static/js/festa_now_audience_js.js?ver=4' %}"></script>
 
-<style></style>
+<style>
+    /* 전체 컨테이너 */
+    #audience_lost_container {
+        width: 100%;
+        height: 100%;
+        padding-top: 50px;
+        padding-left: 3%;
+        padding-right: 20%;
+    }
+
+    /* 공지사항 타이틀 */
+    #subtitle_text_wrapper {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    /* content가 들어가 container */
+    #table_bt_div {
+        background: #ffffff;
+        padding-left: 3%;
+        padding-right: 3%;
+        padding-top: 2%;
+        padding-bottom: 5%;
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    /* 버튼 wrapper */
+    #bt_write_div {
+        width: 100%;
+    }
+
+    /* 테이블 wrapper */
+    #table_div {
+        width: 100%;
+    }
+
+    #table_intro {
+        font-size: 1vw;
+        font-weight: bold;
+    }
+
+    /* 카테고리 board, 실제 내용(공지사항) board -> 밑줄 긋는 css */
+
+    #kind_board,
+    .notice_board {
+        width: 100%;
+        font-size: 18px;
+    }
+
+    #kind_board {
+        border-bottom: 1px solid #000000;
+        font-weight: 500;
+    }
+
+    #kind_board td {
+        padding-top: 30px;
+    }
+
+    .notice_board {
+        border-bottom: 1px solid #6357ff;
+        color: #6357ff;
+    }
+
+    /* board 안에 있는 a 태그 */
+    .notice_board td a {
+        color: #6357ff;
+        text-decoration: none;
+    }
+
+    .notice_board td {
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+
+    /* #content_board {
+        border-bottom: 1px solid #D5D5D5;
+    }
+
+    #content_board a {
+        color: #000000;
+        text-decoration: none;
+    } */
+
+    /* 테이블 태그 */
+    table {
+        width: 100%;
+    }
+
+    /* table_div 안 모든 td 태그 */
+    td {
+        text-align: center;
+    }
+
+    /* 제목이 들어가는 특정 td */
+    .title_td {
+        width: 40%;
+    }
+
+    .title_td a span {
+        display: block;
+        width: 300px;
+        height: auto;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #bt_write_div form {
+        background: #eaeaea;
+        text-align: center;
+        display: inline-block;
+        padding: 7px 20px;
+    }
+
+    #bt_write_div form input {
+        border: 0px;
+    }
+
+    #write_bt_image {
+        width: auto;
+        padding: 1px;
+        font-family: 'FontAwesome';
+        background: none;
+        border: 0px;
+        padding: 0px;
+    }
+
+    #write_bt_text {
+        border: 0px;
+        background: none;
+        padding: 0px;
+    }
+
+    /* 페이지 네이션 */
+    #pagination {
+        width: 100%;
+        text-align: center;
+    }
+</style>
 {% endblock %}
